spin/desidb-ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: desdb-ingress
  namespace: desidb
  ownerReferences:
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    workload.user.cattle.io/workloadselector: deployment-desidb-desidb
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
