spin/desidb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: desidb
  namespace: desidb
spec:
  clusterIP: None
  clusterIPs:
  - None
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: default
    port: 42
    protocol: TCP
    targetPort: 42
  selector:
    workload.user.cattle.io/workloadselector: deployment-desidb-desidb
  sessionAffinity: None
  type: ClusterIP
