spin/desidb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: desidb
  namespace: desidb
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
spec:
  rules:
  - host: desidb.desidb.production.svc.spin.nersc.org
    http:
      paths:
      - backend:
          service:
            name: desidb-ingress
            port:
              number: 8080
        pathType: ImplementationSpecific
